# simses

./: flake.nix  pyproject.toml
src/simses/battery/: battery.py
tests/: test_battery.py
