[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "simses"
dynamic = ["version"]
description = "Simulation of Scalable Energy Storage Systems "
readme = "README.md"
license = "BSD-3-Clause"
classifiers = [
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.12"
dependencies = [
    "numba>=0.65.1",
    "numpy",
    "pandas>=2.2.3",
    "scipy",
]

[project.optional-dependencies]
notebooks = [
    "jupyter>=1.1.1",
    "matplotlib>=3.10.0",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "codespell>=2.3",
    "pytest>=9.0.2",
    "ruff>=0.7.4",
]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-jupyter>=0.25",
    "pymdown-extensions>=10.0",
    "simses[notebooks]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data] 
"simses" = ["**/*.csv"] 

[tool.setuptools_scm]
version_file = "src/simses/_version.py"


[tool.pytest.ini_options]
# Make `examples/` importable in tests so example scripts can be used
# as smoke tests (e.g. `from examples.logging import simulate`).
pythonpath = ["."]

[tool.codespell]
# Skip build artefacts, virtualenvs, caches, lockfiles, and non-text data.
skip = "./site,./.venv,./.ruff_cache,./.pytest_cache,./build,./dist,./src/simses.egg-info,*.lock,*.csv"
# Add comma-separated words here if codespell ever false-positives on a valid identifier.
# ignore-words-list = ""

[tool.ruff]
# Allow lines to be as long as 120.
line-length = 120

[tool.ruff.format]
preview = true  

[tool.ruff.lint]
select = [
    "A",      # flake8-builtins: Check for Python builtins being used as variables or parameters
    "B",      # flake8-bugbear: Find likely bugs and design problems
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes: Detect various errors by parsing the source file
    "I",      # isort: Check and enforce import ordering
    "ISC",    # flake8-implicit-str-concat: Check for implicit string concatenation
    "TID",    # flake8-tidy-imports: Validate import hygiene
    "UP",     # pyupgrade: Automatically upgrade syntax for newer versions of Python
    "SLF001", # flake8-string-format: Check for private object name access
]
ignore = [
    "E501", # line-length violations
    "E741", # ambiguous variable name
]
